--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,6 +1,9 @@
 // COLORS
-$primary-color: #02aab0;
-$secondary-color: #00cdac;
+// $primary-color: #02aab0;
+$primary-color: #373B44;
+// $secondary-color: #00cdac;
+$secondary-color: #4286f4;
+
 
 $white-color: #fff;
 
